<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/linearLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/fab_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:text="@string/intro_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/patient_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:text="@string/patient_id"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/patient_id_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_patient_id"
        android:inputType="text"
        android:outlineProvider="bounds"
        android:paddingBottom="10dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="18dp"
        android:text="@string/dob"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/patient_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:text="@string/gender"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/handedness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="18dp"
        android:text="@string/handedness"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/handedness_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

</LinearLayout>